userCategoryList