@@ -7,25 +7,30 @@ import com.baranbatur.newMotherHelper.dto.response.categoryList.CategoryListResp
 import com.baranbatur.newMotherHelper.exception.NotFoundException;
 import com.baranbatur.newMotherHelper.model.Category;
 import com.baranbatur.newMotherHelper.model.CategoryList;
+import com.baranbatur.newMotherHelper.model.UserCategoryList;
 import com.baranbatur.newMotherHelper.repository.CategoryListRepo;
 import com.baranbatur.newMotherHelper.repository.CategoryRepo;
+import com.baranbatur.newMotherHelper.repository.UserCategoryListRepo;
 import com.baranbatur.newMotherHelper.service.abstracts.ICategoryListService;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 public class CategoryListServiceImpl implements ICategoryListService {
     private final CategoryListRepo categoryListRepo;
+    private final UserCategoryListRepo userCategoryListRepo;
     private final CategoryRepo categoryRepo;
     private final GenericConverter<CategoryList, CategoryListDto> categoryListConverter;
 
     private final GenericConverter<CategoryList, CategoryListRequest> categoryListRequestGenericConverter;
     private final GenericConverter<CategoryList, CategoryListResponse> categoryListResponseGenericConverter;
 
-    public CategoryListServiceImpl(CategoryListRepo categoryListRepo, CategoryRepo categoryRepo) {
+    public CategoryListServiceImpl(CategoryListRepo categoryListRepo, CategoryRepo categoryRepo, UserCategoryListRepo userCategoryListRepo) {
         this.categoryListRepo = categoryListRepo;
+        this.userCategoryListRepo = userCategoryListRepo;
         this.categoryRepo = categoryRepo;
         this.categoryListConverter = new GenericConverter<>(categoryList -> //bu entity sınıfı
                 new CategoryListDto(categoryList.getId(), categoryList.getItemName(), categoryList.getCategory()), categoryListDto -> {
@@ -42,7 +47,7 @@ public class CategoryListServiceImpl implements ICategoryListService {
             return categoryList;
         });
 
-        this.categoryListResponseGenericConverter = new GenericConverter<>(categoryList -> new CategoryListResponse(categoryList.getId(), categoryList.getItemName(), categoryList.getCategory().getId(), categoryList.getCategory().getName()), categoryListResponse -> {
+        this.categoryListResponseGenericConverter = new GenericConverter<>(categoryList -> new CategoryListResponse(categoryList.getId(), categoryList.getItemName(), categoryList.isIs_added()), categoryListResponse -> {
             CategoryList categoryList = new CategoryList();
             categoryList.setId(categoryListResponse.getId());
             categoryList.setItemName(categoryListResponse.getItemName());
@@ -71,11 +76,14 @@ public class CategoryListServiceImpl implements ICategoryListService {
     }
 
     @Override
-    public List<CategoryListResponse> getCategoryListByCategoryId(Integer categoryId) {
+    public List<CategoryListResponse> getCategoryListByCategoryId(Integer categoryId, Integer userId) {
         List<CategoryList> categoryLists = this.categoryListRepo.findCategoryListByCategory_Id(categoryId);
         if (categoryLists.isEmpty()) throw new NotFoundException("Category list not found");
-        Category category = categoryRepo.findById(categoryId).orElseThrow(() -> new NotFoundException("Category not found"));
-        List<CategoryList> categoryList = categoryLists.stream().toList();
-        return categoryList.stream().map(categoryList1 -> new CategoryListResponse(categoryList1.getId(), categoryList1.getItemName(), categoryList1.getCategory().getId(), categoryList1.getCategory().getName())).collect(Collectors.toList());
+        return categoryLists.stream().map(categoryList -> {
+            boolean isAdded = userCategoryListRepo.findByUserIdAndCategoryListId(userId, categoryList.getId()).map(UserCategoryList::isAdded).orElse(false);
+
+            return new CategoryListResponse(categoryList.getId(), categoryList.getItemName(), isAdded);
+        }).collect(Collectors.toList());
+
     }
 }
